<resources>
    <string name="app_name">Week4Bai2</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="_birthday">Birthday</string>
    <string name="select">Select</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="i_agree_to_terms_of_use">I agree to Terms of Use</string>
    <string name="register">Register</string>
</resources>