<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="411sp"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layout_gravity="center"
        android:useDefaultMargins="true"
        android:orientation="vertical"
        app:backgroundTint="@null"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingStart="5sp"
            android:paddingEnd="5sp">
        <TextView
                android:text="@string/first_name"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
        />
        <TextView
                android:layout_marginStart="120dp"
                android:text="@string/last_name"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6sp"
            android:paddingEnd="6sp">
        <EditText
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:autofillHints=""
                android:inputType="text"
                android:padding="3sp"
                android:textSize="15sp"
                android:background="#ddd"
                android:id="@+id/firstName"/>
        <EditText
                android:layout_marginStart="10dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:autofillHints=""
                android:inputType="text"
                android:padding="3sp"
                android:textSize="15sp"
                android:background="#ddd"
                android:id="@+id/lastName"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:paddingStart="6sp"
            android:paddingEnd="6sp">
        <TextView
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioGroup">
            <RadioButton
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male"/>
            <RadioButton
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female"/>
        </RadioGroup>

    </LinearLayout>
    <TextView
            android:text="@string/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6sp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6sp"
            android:paddingEnd="6sp">
        <EditText
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:hint="@string/_birthday"
                android:autofillHints=""
                android:inputType="text"
                android:padding="3sp"
                android:textSize="15sp"
                android:background="#ddd"
                android:id="@+id/birthday"/>
        <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="5sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:id="@+id/datePicker">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <TextView
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6sp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6sp"
            android:paddingEnd="6sp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:hint="@string/address"
                android:autofillHints=""
                android:inputType="textMultiLine"
                android:padding="3sp"
                android:textSize="15sp"
                android:background="#ddd"
                android:id="@+id/address"
                android:gravity="start"/>
    </LinearLayout>
    <TextView
            android:layout_marginTop="10sp"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6sp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6sp"
            android:paddingEnd="6sp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                android:padding="3sp"
                android:textSize="15sp"
                android:background="#ddd"
                android:id="@+id/email"
                android:gravity="start"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:gravity="center_vertical">
        <CheckBox
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:id="@+id/checkbox"/>
        <TextView
                android:text="@string/i_agree_to_terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register">
    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>
